tests/snapshots/protocols__typecheck__tests__add_d1.snap
---
source: src/typecheck.rs
expression: content
---
warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/adders/add_d1.prot:13:3
   │
13 │   DUT.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).

warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/adders/add_d1.prot:14:3
   │
14 │   DUT.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).
