tests/snapshots/protocols__typecheck__tests__aes128_expand_key.snap
---
source: src/typecheck.rs
expression: content
snapshot_kind: text
---
warning: Inferring step value to be 1.
   ┌─ tests/aes128_expand_key.prot:11:3
   │
11 │   step();
   │   ^^^^^^^ Inferring step value to be 1.

warning: Inferring step value to be 1.
   ┌─ tests/aes128_expand_key.prot:15:3
   │
15 │   step();
   │   ^^^^^^^ Inferring step value to be 1.

warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ tests/aes128_expand_key.prot:13:3
   │
13 │   dut.input := X;
   │   ^^^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).
